--- a/_includes/article-block.html
+++ b/_includes/article-block.html
@@ -1,6 +1,6 @@
 <div class="ibox">
     <div class="ibox-content">
-        <a href="article.html" class="btn-link">
+        <a href="#" class="btn-link">
             <h2>
                 {{ include.title }}
             </h2>
@@ -14,7 +14,6 @@
         {% if include.type == "course" %}
           <p class="text-muted"><i class="fa fa-mortar-board"></i>&nbsp; Курс</p>
         {% endif %}
-
         <p>
             {{ include.lead }}
         </p>
