--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,10 +8,10 @@
     <div class="navbar-collapse collapse" id="navbar">
         <ul class="nav navbar-nav">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"> Лента</a>
+                <a href="/" class="dropdown-toggle"> Лента</a>
             </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"> Стажировки</a>
+                <a href="/vacancies.html" class="dropdown-toggle"> Стажировки</a>
             </li>
             <li class="dropdown">
                 <a  href="#" > О платформе </a>
