--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -7,3 +7,13 @@
   color: #DDD;
   height: 45px;
 }
+
+.left-columns{
+  padding-left: 0px;
+  font-size: 16px;
+}
+
+.left-columns li {
+  margin-bottom: 15px;
+  list-style-type: none;
+}
