--- a/_layouts/vacancies.html
+++ b/_layouts/vacancies.html
@@ -34,6 +34,8 @@
                   <a href="/vacancies.html" class="text-muted">< назад</a>
               </div>
               {{ content }}
+              <hr>
+              <a class="btn btn-primary btn-rounded btn-block" href="#"><i class="fa fa-info-circle"></i> Откликнуться на вакансию</a>
             </div>
           </div>
           <div class="col-lg-12">
@@ -54,22 +56,28 @@
                               </thead>
                               <tbody>
                               <tr>
-                                  <td>1</td>
-                                  <td><a href="#">Пятничные вебинары от Skillbox: фриланс и программирование</a></td>
+                                  <td>
+                                    <button class="btn btn-primary btn-circle" type="button"><i class="fa fa-check"></i>
+                            </button></td>
+                                  <td><a href="#" style="font-size:16px;">Пятничные вебинары от Skillbox: фриланс и программирование</a></td>
                                   <td>Хабрахабр</td>
                               </tr>
                               <tr>
-                                  <td>2</td>
-                                  <td><a href="#">Краткое руководство по переменным в CSS</a></td>
+                                  <td><button class="btn btn-primary btn-circle" type="button"><i class="fa fa-check"></i>
+                          </button></td>
+                                  <td><a href="#" style="font-size:16px;">Краткое руководство по переменным в CSS</a></td>
                                   <td>Хабрахабр</td>
                               </tr>
                               <tr>
-                                  <td>3</td>
+                                  <td><button class="btn btn-danger btn-circle btn-outline" type="button"><i class="fa fa-times"></i>
+
+                          </button></td>
                                   <td><a href="#">CSS Grid — швейцарский армейский нож для макетов сайтов и приложений</a></td>
                                   <td>Geekbrains</td>
                               </tr>
                               <tr>
-                                  <td>4</td>
+                                  <td><button class="btn btn-danger btn-circle btn-outline" type="button"><i class="fa fa-times"></i>
+                          </button></td>
                                   <td><a href="#">Доступность интерфейсов. Лекция Яндекса</a></td>
                                   <td>Яндекс</td>
                               </tr>
